fix scroll, time, flicker

--- a/src/Chat.css
+++ b/src/Chat.css
@@ -33,6 +33,7 @@
   background-position: center;
   background-repeat: repeat;
   padding: 30px;
+  padding-bottom: 0;
   margin-top: 10px;
   background-image: url(https://manofmany.com/wp-content/uploads/2019/07/50-Minimalist-iPhone-Wallpapers-34.jpg);
   overflow: auto;
